@@ -1,3 +1,8 @@
+2024-08-08  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-container.el (tramp-kubernetes--context-namespace):
+	Handle nil list elements.
+
 2024-08-06  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-integration.el (shortdoc): Use `tramp--with-startup'.
